fix background color clipping

--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,7 @@
 
 .DataTable {
   font-family: 'Overpass Mono', monospace;
+  background-color: white;
 }
 
 .Button {
